# Fact-check-debate-chamber

./: .env.example  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
config/: debate.yaml
config/agents/: analyst.yaml  researcher.yaml  skeptic.yaml
scripts/: setup_langfuse.py
src/: agent_service.py
src/agents/: analyst.py  base.py  researcher.py  skeptic.py
src/debate_chamber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/factory/: agent_factory.py
src/memory/: base.py  embedding.py  qdrant_memory.py
src/messaging/: nats_client.py
src/monitor/: nats_monitor.py
src/orchestrator/: agent_registry.py  debate_manager.py  main.py
src/protocol/: agent_card.py  schemas.py
src/runtime/: base.py  openai_runtime.py
src/tools/: base.py  contradiction.py  evidence_search.py
src/tracing/: tracer.py
tests/: test_debate_manager.py  test_memory.py  test_protocol.py
ui/: app.py
